<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up()
    {
        Schema::create('riwayat_tarif_spp', function (Blueprint $table) {
            $table->id();
            $table->foreignId('kategori_id')->constrained('kategori_santri');
            $table->decimal('biaya_makan', 10, 2);
            $table->decimal('biaya_asrama', 10, 2);
            $table->decimal('biaya_listrik', 10, 2);
            $table->decimal('biaya_kesehatan', 10, 2);
            $table->decimal('nominal', 10, 2);
            $table->date('berlaku_mulai');
            $table->date('berlaku_sampai')->nullable();
            $table->text('keterangan')->nullable();
            $table->timestamps();
        });
    }

    public function down()
    {
        Schema::dropIfExists('riwayat_tarif_spp');
    }
};
